# rgb-tests

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  codecov.yml  sub-branch-change.sh  sub-rev-change.sh  submodules-rev.sh
.github/workflows/: build.yml  checks.yml  format.yml  lint.yml  test.yml
scripts/: dump.sh
tests/: basic.rs  compose.yaml  coverage.sh  docker-compose.yml  issuance.rs  start_services.sh  stress.rs  transfer.rs  transfers.rs  validation.rs  validation.rs.bak
tests-dev-log/: submodules-0212-older-status.bak  submodules-0212-updated-status.bak
tests/bitcoin.testnet/: note
tests/dev-log/: V11-test-summary.md  V12-test-summary-en.md  V12-test-summary.md  test-summary.md
tests/docker/: .env  docker-compose.yml  start_services.sh
tests/fixtures/: attack_bundles_pubWitness_data_input_sequence.yaml  attack_chain.yaml  attack_genesis_schema_id.yaml  attack_genesis_testnet.yaml  attack_resolver_error.yaml  bc:0bc3024ce6404cd7aea387debde687d9e8731228e16b04b4eefda7283069f1c3.yaml  bc:222f1a35bb96a02831930dcdd02e46f46daca1fdd7199dd043e04c7841b2ff40.yaml  bc:3b9c8836e09cdf08d225b8e9f7862e23a6ede1276c12ccd426c530cd531e4cfa.yaml  bc:5abbca66698ef17ab5e5794adc5a73e5988a96235b84e943a0c4e0fd05a8ca66.yaml  bc:97b4c906fafad952e7b68784d38f56dec505a719c2564743b1bebe0289c7d893.yaml  bc:b9703e716d01de771d443c5cbf06cbba1f132c67a2b6d8c6c88bbcc0f83afe1b.yaml  bc:c269055b7750a234087c11acd7a408172cb84d8fc6af0ded42d8a8cbea6712e9.yaml  bc:f93edffa684d53146d5bc11122eb129960f2ca86bbdbca338df3b3c7234544dc.yaml  bc_00e7475b52f6489ca4909c998c69ce7e6049baca2357275a2063cd29130f06ef.yaml  bc_1477b7ba53b36355f4aef8ebfa22cb71faa2a574ed37e06479de7945b79bb46f.yaml  bc_1c80e38f2f60d264eb7098321ae884946b888a2ddfd27f1edad4cafb9a2d9310.yaml  bc_252b60eb081f7128b82d4bc3abcf39413c94b6a51d3b27bfb530424c05ed7d09.yaml  bc_2edab5182e37eca9fcb947ad921bd32bb08aa4b0901267ed3d6d16141a3f263f.yaml  bc_3652d9fea802cb051f671455cbd7472e3bce2c440a4e54fa4321107037dfaff0.yaml  bc_3f05563bab0ee90d9cd61ec23610a44a99c473cb57c25538ace176dd76bc7d56.yaml  bc_3f16d0aa315b3c314bc41d4b106f0d4512adda07d9db5b7a2e08105f131704ff.yaml  bc_57fcfd83cfb09f1f28c6c3cd66d3c727638d7ade64d56d5de672a2089590404a.yaml  bc_5921fa422e0438beb1a78198249b79fc20ef468d1d443889f61a214667e6e576.yaml  bc_5df49f41bc7416eb8573ebce3795227b770e480bea87ea5ee8d57e293de79771.yaml  bc_5fe5ebf33ac525ecf9fecd18211630d022edf075accf137757dbca18f98c9795.yaml  bc_6a3e8af0f6c16fd1bfbe28219bf79997e2f7383d640d9b6bfe2aedb5ec825ce2.yaml  bc_6a4c454f7a72de0d4ebe69e9e22094a00a259fc177e4e1cebd6a47cc796a8afc.yaml  bc_6b19031336b19eb84b2d99b643fc724030f69c687a71e1384e0853417c79c33b.yaml  bc_7cc93bfb48099795843063cf2d54f5a9f68d1eb13134dafa946a4f64f1349a56.yaml  bc_80c89be42001afdf27b20ca846d72d8ab61f41160580053804d5a19491989e2f.yaml  bc_95e3389d5bf4475849333bde0ecc9fe645f8080d1ae7489b25eb37196454d6b0.yaml  bc_a5c3085efe8dfdba0fa0e11d81bf90cdcac27c0af496c4de1a2fd9659948ffce.yaml  bc_aadbf3642232746acb8e14ae520e97355c272f1ccde427067d2505370fd8e280.yaml  bc_b001b86ef4b87fd26877cbcff3e525e68a1e12d17b905fad44891d2946e794c8.yaml  bc_b8fb67429d4328952b5aefe9c8eb343b690b1f7ebd0ab28aef1d1ffe548feec9.yaml  bc_ce4cffc4ff65b78c9637b3fd1dbfc3e8fba0b81749fa8257303081e7342e01c9.yaml  bc_d077ea7e3a55a215893a18e82cb03fda0f50619893e4aee0ba70b014e6d63248.yaml  bc_d84c37b6c6616184c454c815d970505bed9b3a3723a4445dd1289dc708bc80b3.yaml  bc_da9426377fb572da296e34be318da92e8f1d31aabacb87d8c281a1d7948467b5.yaml  bc_f18f5b7496dff031a4700cd0b62d451489c9c560271b0048cf77b3d4c01a11bf.yaml  (+3 more)
tests/templates/issuance/: CollectibleFungibleAsset.yaml  FUA.yaml  NFA.yaml
tests/templates/schemata/: RGB20-NFA.issuer  RGB21-FAC.issuer  RGB21-UAC.issuer  RGB21-UDA.issuer  RGB25-FUA.issuer
tests/utils/: api.rs  chain.rs  consignment_utils.rs  helpers.rs  mod.rs  runtime.rs
